ajout liens intégration spotify electro

--- a/music/electro.html
+++ b/music/electro.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Rap</title>
+    <title>Electro</title>
     <link rel="icon" href="../images/pageIcon.png" />
     <link rel="stylesheet" media="screen and (min-width:1081px)" href="../css/style.css" />
     <link rel="stylesheet" media="screen and (max-width:1080px)" href="../css/mobile.css" />
@@ -15,7 +15,7 @@
         <div class="title">
             <a href="../index.html#" class="logo50"></a>
             <div class="subtitle">
-                Rap
+                Electro
             </div>
         </div>
     </header>
@@ -55,14 +55,19 @@
                                     le logo d'avicii
                                 </figcaption>
                         </figure>
-                        <p>
+                        <div class="paragraph">
                             Producteur, musicien et DJ suédois, son single Levels lui permet de connaître une notoriété mondiale.
                             Par la suite, son morceau Wake Me Up est un des hits de l'été 2013 et bat de nombreux records.
                             Il est alors considéré comme l'un des DJs les plus importants de la scène électronique.
                             L'album sur lequel Avicii travaillait avant sa mort sort le 6 juin 2019 sous le nom de Tim. Atteint d'une dépression,
                             il se suicide à l'âge de 28 ans le 20 avril 2018.
                             Ses principaux titres sont wake me up, I could be the one, SOS.
-                        </p>
+                        <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/4h8VwCb1MTGoLKueQ1WgbD"
+                                    allow="encrypted-media"></iframe>
+                            </div>
+                        </div>
                         <figure class="simple-yt">
                             <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -70,6 +75,8 @@
                             <figcaption>
                                Wake me up, qui comptabilise plus d'1.8 milliards de vues.
                             </figcaption>
+                        </figure>
+                        </div>    
                     </li>
                     <li>
                         Martin Garrix
@@ -79,7 +86,7 @@
                                     poster de Martin Garrix
                                 </figcaption>
                         </figure>
-                        <p> 
+                        <div class="paragraph">
                             DJ, compositeur et producteur musical néerlandais, il se fait connaître mondialement avec son titre Animals en 2013. 
                             Classé en 2016 par le DJ Magazine comme étant le meilleur DJ au monde,
                             il est très présent sur la scène musicale mondiale en mixant lors de grands festivals. 
@@ -87,7 +94,12 @@
                             Animals, sorti en juin 2013, est la chanson qui a révélé le DJ au public, se classant dans le top dix dans une dizaine de pays,
                             et même à la première place au Royaume-Uni et en Belgique. 
                             Ses titres les plus connus sont scared to be lonely, in the name of love.
-                        </p>
+                        <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/0gxGuvGAGfc41ujvTtXE2H"
+                                    allow="encrypted-media"></iframe>
+                            </div>
+                        </div>
                         <figure class="simple-yt">
                             <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/gCYcHz2k5x0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -96,26 +108,26 @@
                                Animals, qui compte plus d'1.3 milliards de vues.
                             </figcaption>
                         </figure>
+                    </div> 
                     </li>
                     <li>
                         Tiësto
                         <figure class="float-right bordered">
                             <img src="../images/tiesto.jpg" alt=""  width="200" class="rounded-corners" />
                         </figure>  
-                        <p>
+                        <div class="paragraph">
                         DJ, compositeur et producteur musical néerlandais, il est considéré comme une grande figure de la musique électronique,
                         aux côtés notamment de Paul van Dyk, Calvin Harris, Hardwell, David Guetta et Armin van Buuren.
                         DJ Magazine le classe « plus grand DJ de tous les temps » et Mixmag meilleur DJ du monde. 
                         Il est le 2e Dj le mieux payé en 2016 avec 38 millions de dollars cumulés en 12 mois, derrière Calvin Harris,
                         qui a engrangé 63 millions de dollars entre le 1er juin 2015 et le 1er juin 2016.
                         Ses titres les plus populaires sont red lights, secrets, wasted.
-                        </p>
-                        <figure class="float-right bordered">
-                            <img src="../images/tiesto2.jpg" alt=""  width="400" class="rounded-corners" />
-                            <figcaption>
-                            Le dimanche 27 octobre, il est invité au grand prix de Formule 1 du Mexique pour mixer après la cérémonie du podium au sein du stadium.
-                            </figcaption>
-                        </figure>  
+                        <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/3F9YLiNOsWDHZhSJsS0Cw1"
+                                    allow="encrypted-media"></iframe>
+                            </div>
+                        </div>
                         <figure class="simple-yt">
                                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/Dr1nN__-2Po"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -123,5 +135,14 @@
                                 <figcaption>
                                    Secrets, un featuring avec le dj KSHMR et la chanteuse australienne Vassy.
                                 </figcaption>
-                        </figure>       
+                        </figure> 
+                        <figure>
+                            <img src="../images/tiesto2.jpg" alt=""  width="400" class="rounded-corners" />
+                            <figcaption>
+                            Le dimanche 27 octobre, il est invité au grand prix de Formule 1 du Mexique pour mixer après la cérémonie du podium au sein du stadium.
+                            </figcaption>
+                        </figure>   
+                        </div>     
                     </li>
+                 </ul>
+            </article>        
