--- a/music/rap.html
+++ b/music/rap.html
@@ -82,6 +82,12 @@
                             Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
                             bientôt, les prélis.
                         </div>
+                        <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/6Uk6MCdcT025QBTcXRFKDL"
+                                    allow="encrypted-media"></iframe>
+                            </div>
+                        </div>
                         <figure class="simple-yt">
                             <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YljnTp8yQFM"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -106,6 +112,12 @@
                             Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses
                             principaux titres sont princesse, on verra, ma dope.
                         </div>
+                         <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/57I5KhEpQFC9XBgKt6nklL"
+                                    allow="encrypted-media"></iframe>
+                            </div>
+                        </div>
                         <figure class="simple-yt">
                             <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YltjliK0ZeA"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -125,7 +137,7 @@
                             </figcaption>
                         </figure>
                         <div class="paragraph">
-                            sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
+                            Sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
                             Ademo et N.O.S (de leurs vrais noms Tarik et Nabil Andrieu),
                             originaires de la cité des Tarterêts à Corbeil-Essonnes.
                             Leur single "au DD" a accumulé plus de 12 millions de vues en moins de 48h. Celui-ci compte
@@ -164,6 +176,20 @@
                             Victoires de la musique. Ses titres les plus populaires sont paradis, 
                             défaite de famille et mes grands-parents.
                         </div>
+                        <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/2ICdvchXmDh5mdLyyL2opB"
+                                    allow="encrypted-media"></iframe>
+                            </div>
+                        </div>
+                        <figure class="simple-yt">
+                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/2bjk26RwjyU"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                            <figcaption>
+                               Le clip basique, dans lequel le Orelsan enchaîne les punchlines, comme "Les hommes politiques doivent mentir sinon tu voterais pas pour eux", et bien d'autres.
+                            </figcaption>
+
                     </li>
                 </ul>
             </article>
@@ -194,6 +220,12 @@
                     Ses principaux titres sont Lose yourself, Stan, Mockingbird, Without me, Rap God.
                     Il existe de nombreux autres rappeurs américains connus, comme Kanye West, Fat Joe, Asap Rocky,
                     XXXTentacion, Jay Z, Snoop Dog, Dr Dre et beaucoup d'autres.
+                </div>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/7MJQ9Nfxzh8LPZ9e9u68Fq"
+                            allow="encrypted-media"></iframe>
+                    </div>
                 </div>
                 <figure class="double-yt">
                     <div>
