added new mobile menu

--- a/music/metal.html
+++ b/music/metal.html
@@ -20,9 +20,13 @@
         </div>
     </header>
     <aside class="navbar">
-        <iframe src="../nav.html"></iframe>
-        <img class="navbar-line" src="../images/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="../images/fleche.png" alt="icon navbar" />
+        <div>
+            <iframe src="../nav.html"></iframe>
+            <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
+            <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
+            <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+        </div>
+        <div class="mobile dark-back"></div>
     </aside>
     <main>
         <section class="no-top-separator">
@@ -437,7 +441,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de death metal, Shall Rise/Shall Be Dead de George Kollias, un batteur peu connu dont la musique atteint 250bpm (2015) et L'enfant Sauvage de Gojira (2012)
+                    Deux titres de death metal, Shall Rise/Shall Be Dead de George Kollias, un batteur peu connu dont la
+                    musique atteint 250bpm (2015) et L'enfant Sauvage de Gojira (2012)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
