adaptation to all pages

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
         <source src="images/background.mp4" type="video/mp4">
     </video>
     <aside class="navbar">
-        <iframe src="nav.html"></iframe>
-        <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
-    </aside>
-    <div class="blank-div">
+            <div>
+                <iframe src="../nav.html"></iframe>
+                <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
+                <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
+                <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+            </div>
+            <div class="mobile dark-back"></div>
+        </aside>
+        <div class="blank-div">
     </div>
     <main>
         <section id="pulse_pres">
