--- a/music/alternative.html
+++ b/music/alternative.html
@@ -20,9 +20,13 @@
         </div>
     </header>
     <aside class="navbar">
-        <iframe src="../nav.html"></iframe>
-        <img class="navbar-line" src="../images/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="../images/fleche.png" alt="icon navbar" />
+        <div>
+            <iframe src="../nav.html"></iframe>
+            <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
+            <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
+            <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+        </div>
+        <div class="mobile dark-back"></div>
     </aside>
     <main>
         <section class="no-top-separator">
@@ -502,7 +506,8 @@
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        Deux titres de Imagine Dragons, Radioactive (2012) et Warriors (2014) -Musique des Worlds League Of Legends 2014-
+                        Deux titres de Imagine Dragons, Radioactive (2012) et Warriors (2014) -Musique des Worlds League
+                        Of Legends 2014-
                     </figcaption>
                 </figure>
                 <span class="source">Source : wikipedia.org</span>
