--- a/music/electro.html
+++ b/music/electro.html
@@ -20,9 +20,13 @@
         </div>
     </header>
     <aside class="navbar">
-        <iframe src="../nav.html"></iframe>
-        <img class="navbar-line" src="../images/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="../images/fleche.png" alt="icon navbar" />
+        <div>
+            <iframe src="../nav.html"></iframe>
+            <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
+            <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
+            <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+        </div>
+        <div class="mobile dark-back"></div>
     </aside>
     <main>
         <section class="no-top-separator">
@@ -30,18 +34,24 @@
                 L'électro ou EDM ( Electronic Dance Music )
             </h2>
             <p>
-                L'électro ou musique électronique, est un style de musique entièrement composé pour danser et principalement joué dans des boîtes de nuit, raves et festivals.
+                L'électro ou musique électronique, est un style de musique entièrement composé pour danser et
+                principalement joué dans des boîtes de nuit, raves et festivals.
                 Cette variété est produite et jouée par des DJ (Disc Jockey).
                 Il existe de nombreux festivals de musique électronique, les plus connus étant Tomorrowland en Belgique,
-                élu trois fois de suite comme « meilleur événement musical de l'année ». Il demeure aujourd'hui le festival d'électro le plus connu au monde.
-                Chaque année, 400 000 festivaliers s'y retrouvent sur 2 week-ends du mois de juillet. 
-                L'Ultra Music Festival (UMF), festival américain organisé à Miami, s'est exporté dans d'autres pays. Il se déroule aujourd'hui sur 5 continents.
-                L'entreprise  Ultra Worldwide organise les festivals UMF, qui comptent 45 dates sur plus d'une vingtaine de pays,
-                dont une douzaine sous la seule marque « Ultra ». L'édition de 2019 à Miami a rassemblé 170 000 festivaliers.
-                Il est considéré comme l'un des meilleurs événements musicaux électroniques du monde avec Tomorrowland, l'Amsterdam Music Festival,
-                l'Electric Daisy Carnival et le Coachella. 
+                élu trois fois de suite comme « meilleur événement musical de l'année ». Il demeure aujourd'hui le
+                festival d'électro le plus connu au monde.
+                Chaque année, 400 000 festivaliers s'y retrouvent sur 2 week-ends du mois de juillet.
+                L'Ultra Music Festival (UMF), festival américain organisé à Miami, s'est exporté dans d'autres pays. Il
+                se déroule aujourd'hui sur 5 continents.
+                L'entreprise Ultra Worldwide organise les festivals UMF, qui comptent 45 dates sur plus d'une vingtaine
+                de pays,
+                dont une douzaine sous la seule marque « Ultra ». L'édition de 2019 à Miami a rassemblé 170 000
+                festivaliers.
+                Il est considéré comme l'un des meilleurs événements musicaux électroniques du monde avec Tomorrowland,
+                l'Amsterdam Music Festival,
+                l'Electric Daisy Carnival et le Coachella.
             </p>
-            
+
             <article id="electro">
                 <p>
                     Voici ci-dessous quelques Dj les plus connus aujourd'hui:
@@ -51,98 +61,108 @@
                         Avicii
                         <figure class="float-right bordered">
                             <img src="../images/avicii.png" alt="avicii" width="200" class="rounded-corners" />
-                                <figcaption>
-                                    le logo d'avicii
-                                </figcaption>
-                        </figure>
-                        <div class="paragraph">
-                            Producteur, musicien et DJ suédois, son single Levels lui permet de connaître une notoriété mondiale.
-                            Par la suite, son morceau Wake Me Up est un des hits de l'été 2013 et bat de nombreux records.
-                            Il est alors considéré comme l'un des DJs les plus importants de la scène électronique.
-                            L'album sur lequel Avicii travaillait avant sa mort sort le 6 juin 2019 sous le nom de Tim. Atteint d'une dépression,
-                            il se suicide à l'âge de 28 ans le 20 avril 2018.
-                            Ses principaux titres sont wake me up, I could be the one, SOS.
-                        <div class="spotify-integ">
-                            <div>
-                                <iframe src="https://open.spotify.com/embed/track/4h8VwCb1MTGoLKueQ1WgbD"
-                                    allow="encrypted-media"></iframe>
-                            </div>
-                        </div>
-                        <figure class="simple-yt">
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
                             <figcaption>
-                               Wake me up, qui comptabilise plus d'1.8 milliards de vues.
+                                le logo d'avicii
                             </figcaption>
                         </figure>
-                        </div>    
+                        <div class="paragraph">
+                            Producteur, musicien et DJ suédois, son single Levels lui permet de connaître une notoriété
+                            mondiale.
+                            Par la suite, son morceau Wake Me Up est un des hits de l'été 2013 et bat de nombreux
+                            records.
+                            Il est alors considéré comme l'un des DJs les plus importants de la scène électronique.
+                            L'album sur lequel Avicii travaillait avant sa mort sort le 6 juin 2019 sous le nom de Tim.
+                            Atteint d'une dépression,
+                            il se suicide à l'âge de 28 ans le 20 avril 2018.
+                            Ses principaux titres sont wake me up, I could be the one, SOS.
+                            <div class="spotify-integ">
+                                <div>
+                                    <iframe src="https://open.spotify.com/embed/track/4h8VwCb1MTGoLKueQ1WgbD"
+                                        allow="encrypted-media"></iframe>
+                                </div>
+                            </div>
+                            <figure class="simple-yt">
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                                <figcaption>
+                                    Wake me up, qui comptabilise plus d'1.8 milliards de vues.
+                                </figcaption>
+                            </figure>
+                        </div>
                     </li>
                     <li>
                         Martin Garrix
                         <figure class="float-right bordered">
-                            <img src="../images/martingarrix.jpg" alt="Martin Garrix" width="200" class="rounded-corners" />
-                                <figcaption>
-                                    poster de Martin Garrix
-                                </figcaption>
-                        </figure>
-                        <div class="paragraph">
-                            DJ, compositeur et producteur musical néerlandais, il se fait connaître mondialement avec son titre Animals en 2013. 
-                            Classé en 2016 par le DJ Magazine comme étant le meilleur DJ au monde,
-                            il est très présent sur la scène musicale mondiale en mixant lors de grands festivals. 
-                            Il compose ses musiques majoritairement en studio, notamment avec le logiciel FL Studio. 
-                            Animals, sorti en juin 2013, est la chanson qui a révélé le DJ au public, se classant dans le top dix dans une dizaine de pays,
-                            et même à la première place au Royaume-Uni et en Belgique. 
-                            Ses titres les plus connus sont scared to be lonely, in the name of love.
-                        <div class="spotify-integ">
-                            <div>
-                                <iframe src="https://open.spotify.com/embed/track/0gxGuvGAGfc41ujvTtXE2H"
-                                    allow="encrypted-media"></iframe>
-                            </div>
-                        </div>
-                        <figure class="simple-yt">
-                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/gCYcHz2k5x0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <img src="../images/martingarrix.jpg" alt="Martin Garrix" width="200"
+                                class="rounded-corners" />
                             <figcaption>
-                               Animals, qui compte plus d'1.3 milliards de vues.
+                                poster de Martin Garrix
                             </figcaption>
                         </figure>
-                    </div> 
+                        <div class="paragraph">
+                            DJ, compositeur et producteur musical néerlandais, il se fait connaître mondialement avec
+                            son titre Animals en 2013.
+                            Classé en 2016 par le DJ Magazine comme étant le meilleur DJ au monde,
+                            il est très présent sur la scène musicale mondiale en mixant lors de grands festivals.
+                            Il compose ses musiques majoritairement en studio, notamment avec le logiciel FL Studio.
+                            Animals, sorti en juin 2013, est la chanson qui a révélé le DJ au public, se classant dans
+                            le top dix dans une dizaine de pays,
+                            et même à la première place au Royaume-Uni et en Belgique.
+                            Ses titres les plus connus sont scared to be lonely, in the name of love.
+                            <div class="spotify-integ">
+                                <div>
+                                    <iframe src="https://open.spotify.com/embed/track/0gxGuvGAGfc41ujvTtXE2H"
+                                        allow="encrypted-media"></iframe>
+                                </div>
+                            </div>
+                            <figure class="simple-yt">
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/gCYcHz2k5x0"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                                <figcaption>
+                                    Animals, qui compte plus d'1.3 milliards de vues.
+                                </figcaption>
+                            </figure>
+                        </div>
                     </li>
                     <li>
                         Tiësto
                         <figure class="float-right bordered">
-                            <img src="../images/tiesto.jpg" alt=""  width="200" class="rounded-corners" />
-                        </figure>  
+                            <img src="../images/tiesto.jpg" alt="" width="200" class="rounded-corners" />
+                        </figure>
                         <div class="paragraph">
-                        DJ, compositeur et producteur musical néerlandais, il est considéré comme une grande figure de la musique électronique,
-                        aux côtés notamment de Paul van Dyk, Calvin Harris, Hardwell, David Guetta et Armin van Buuren.
-                        DJ Magazine le classe « plus grand DJ de tous les temps » et Mixmag meilleur DJ du monde. 
-                        Il est le 2e Dj le mieux payé en 2016 avec 38 millions de dollars cumulés en 12 mois, derrière Calvin Harris,
-                        qui a engrangé 63 millions de dollars entre le 1er juin 2015 et le 1er juin 2016.
-                        Ses titres les plus populaires sont red lights, secrets, wasted.
-                        <div class="spotify-integ">
-                            <div>
-                                <iframe src="https://open.spotify.com/embed/track/3F9YLiNOsWDHZhSJsS0Cw1"
-                                    allow="encrypted-media"></iframe>
+                            DJ, compositeur et producteur musical néerlandais, il est considéré comme une grande figure
+                            de la musique électronique,
+                            aux côtés notamment de Paul van Dyk, Calvin Harris, Hardwell, David Guetta et Armin van
+                            Buuren.
+                            DJ Magazine le classe « plus grand DJ de tous les temps » et Mixmag meilleur DJ du monde.
+                            Il est le 2e Dj le mieux payé en 2016 avec 38 millions de dollars cumulés en 12 mois,
+                            derrière Calvin Harris,
+                            qui a engrangé 63 millions de dollars entre le 1er juin 2015 et le 1er juin 2016.
+                            Ses titres les plus populaires sont red lights, secrets, wasted.
+                            <div class="spotify-integ">
+                                <div>
+                                    <iframe src="https://open.spotify.com/embed/track/3F9YLiNOsWDHZhSJsS0Cw1"
+                                        allow="encrypted-media"></iframe>
+                                </div>
                             </div>
-                        </div>
-                        <figure class="simple-yt">
+                            <figure class="simple-yt">
                                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/Dr1nN__-2Po"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                                 <figcaption>
-                                   Secrets, un featuring avec le dj KSHMR et la chanteuse australienne Vassy.
+                                    Secrets, un featuring avec le dj KSHMR et la chanteuse australienne Vassy.
                                 </figcaption>
-                        </figure> 
-                        <figure>
-                            <img src="../images/tiesto2.jpg" alt=""  width="400" class="rounded-corners" />
-                            <figcaption>
-                            Le dimanche 27 octobre, il est invité au grand prix de Formule 1 du Mexique pour mixer après la cérémonie du podium au sein du stadium.
-                            </figcaption>
-                        </figure>   
-                        </div>     
+                            </figure>
+                            <figure>
+                                <img src="../images/tiesto2.jpg" alt="" width="400" class="rounded-corners" />
+                                <figcaption>
+                                    Le dimanche 27 octobre, il est invité au grand prix de Formule 1 du Mexique pour
+                                    mixer après la cérémonie du podium au sein du stadium.
+                                </figcaption>
+                            </figure>
+                        </div>
                     </li>
-                 </ul>
-            </article>        
+                </ul>
+            </article>
