--- a/music/rap.html
+++ b/music/rap.html
@@ -20,9 +20,13 @@
         </div>
     </header>
     <aside class="navbar">
-        <iframe src="../nav.html"></iframe>
-        <img class="navbar-line" src="../images/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="../images/fleche.png" alt="icon navbar" />
+        <div>
+            <iframe src="../nav.html"></iframe>
+            <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
+            <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
+            <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+        </div>
+        <div class="mobile dark-back"></div>
     </aside>
     <main>
         <section class="no-top-separator">
@@ -112,7 +116,7 @@
                             Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses
                             principaux titres sont princesse, on verra, ma dope.
                         </div>
-                         <div class="spotify-integ">
+                        <div class="spotify-integ">
                             <div>
                                 <iframe src="https://open.spotify.com/embed/track/57I5KhEpQFC9XBgKt6nklL"
                                     allow="encrypted-media"></iframe>
@@ -171,9 +175,9 @@
                         </figure>
                         <div class="paragraph">
                             Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One
-                            Punch Man, il revient à la musique en 2017 avec le titre "basique", avant de sortir 
-                            l'album la fête est finie, certifié disque de diamant. Le rappeur a remporté trois 
-                            Victoires de la musique. Ses titres les plus populaires sont paradis, 
+                            Punch Man, il revient à la musique en 2017 avec le titre "basique", avant de sortir
+                            l'album la fête est finie, certifié disque de diamant. Le rappeur a remporté trois
+                            Victoires de la musique. Ses titres les plus populaires sont paradis,
                             défaite de famille et mes grands-parents.
                         </div>
                         <div class="spotify-integ">
@@ -187,7 +191,8 @@
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                             <figcaption>
-                               Le clip basique, dans lequel le Orelsan enchaîne les punchlines, comme "Les hommes politiques doivent mentir sinon tu voterais pas pour eux", et bien d'autres.
+                                Le clip basique, dans lequel le Orelsan enchaîne les punchlines, comme "Les hommes
+                                politiques doivent mentir sinon tu voterais pas pour eux", et bien d'autres.
                             </figcaption>
 
                     </li>
