--- a/histoire.html
+++ b/histoire.html
@@ -20,11 +20,15 @@
         </div>
     </header>
     <aside class="navbar">
-        <iframe src="nav.html"></iframe>
-        <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
-    </aside>
-    <main>
+            <div>
+                <iframe src="../nav.html"></iframe>
+                <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
+                <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
+                <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+            </div>
+            <div class="mobile dark-back"></div>
+        </aside>
+        <main>
         <h2>L'histoire de la musique</h2>
         <section class="no-top-separator">
             <h3>La musique au XXe siècle</h3>
