--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </video>
     <aside class="navbar">
             <div>
-                <iframe src="../nav.html"></iframe>
-                <img class="mobile" src="../images/icons/mobileMenu.png" alt="menu" />
-                <img class="navbar-line computer" src="../images/ligne.png" alt="icon navbar" />
-                <img class="navbar-arrow computer" src="../images/fleche.png" alt="icon navbar" />
+                <iframe src="nav.html"></iframe>
+                <img class="mobile" src="images/icons/mobileMenu.png" alt="menu" />
+                <img class="navbar-line computer" src="images/ligne.png" alt="icon navbar" />
+                <img class="navbar-arrow computer" src="images/fleche.png" alt="icon navbar" />
             </div>
             <div class="mobile dark-back"></div>
         </aside>
