fixed metal paragraph

--- a/music/metal.html
+++ b/music/metal.html
@@ -177,7 +177,7 @@
             <h2>
                 Thrash metal
             </h2>
-            <p>
+            <div class="paragraph">
                 Le Thrash metal est plutôt dérivé du <a href="rock.html#punk">Punk rock</a>. Encore plus
                 rapide/aggressive
                 que le <a href="#heavy">Heavy metal</a>, il se développe dans les années 1980. Le Thrash aborde souvent
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 (et bien d'autres) ont été les principaux précurseurs du genre.
-            </p>
+            </div>
             <span class="source">Source : wikipedia.org</span>
             <p>
                 3 groupes connus, dont un plus récent :
